[project]
name = "huggingface-course"
version = "0.1.0"
description = "A project for NLP using Hugging Face"
authors = [
    {name = "Maxwell Mensah",email = "mmaxwell265@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "huggingface-hub (>=0.29.3,<0.30.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
